fixed collapse button bug fixed navigator deleting events

--- a/css/style.css
+++ b/css/style.css
@@ -239,11 +239,11 @@ html,body {
 }
 
 .mindmap .button-collapse.closed {
-	background-position: 0px -16px;
+	background-position: 0 0;
 }
 
 .mindmap .button-collapse.open {
-	background-position: 0px 0px;
+	background-position: 0 -16px;
 }
 
 #creator-wrapper {
